update UX/UI
