# backend/internal/models/warehouse.go
@@ -2,8 +2,8 @@ package models
 
 import "github.com/google/uuid"
 
-// Stocks represents a user's stock list.
-type Stocks struct {
+// Warehouse represents a user's stock list.
+type Warehouse struct {
 	StockID   uuid.UUID `bson:"StockID" json:"StockID"`
 	UserID    uuid.UUID `bson:"UserID" json:"UserID"`
 	StockName string    `bson:"StockName" json:"StockName"`
